add methods addfile, getRows, and renameProperty to xlsx-reader component

--- a/src/app/components/xlsx-reader/xlsx-reader.component.html
+++ b/src/app/components/xlsx-reader/xlsx-reader.component.html
@@ -1,1 +1,11 @@
-<p>xlsx-reader works!</p>
+<div
+  class="col-md-8 form-group"
+  >
+  <input
+    type="file"
+    class="form-control"
+    (change)="addfile($event)"
+    placeholder="Upload file"
+    accept=".csv,application/vnd.openxmlformats-officedocument.spreadsheetml.sheet, application/vnd.ms-excel"
+    >
+</div>
